--- a/public/styles/brands-new.css
+++ b/public/styles/brands-new.css
@@ -60,10 +60,10 @@ label {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.checkbox {
+/* .checkbox {
   position:absolute;
   left: 32%;
-}
+} */
 
 
 
